# ai-stanbul

./: .coverage  .dockerignore  .dockerignore.broken  .env  .env.docker  .env.example  .env.prod.template  .env.save  .env.template  .gcloudignore  .gitattributes  .gitignore  ABOUT_PAGE_CLEANUP.md  ACTION_REQUIRED_DATABASE_PASSWORD.md  ADD_PERMISSIONS_VIA_CONSOLE.md  ADD_SSH_KEY_STEP_BY_STEP.md  ADD_SSH_KEY_TO_RUNPOD.md  ADMIN_CREDENTIALS_QUICK_REFERENCE.md  ADMIN_DASHBOARD_QUICK_START.md  ADMIN_DASHBOARD_READY_FOR_TESTING.md  ADMIN_DASHBOARD_REAL_DATA_UPDATE.md  ADMIN_ROUTES_RESOLUTION_FINAL.md  ADVANCED_AI_FEATURES.md  ADVANCED_AI_IMPLEMENTATION_FINAL.md  AISTANBUL_NET_ADMIN_CONFIG.md  AI_ENHANCEMENT_COMPLETION_REPORT.md  AI_ISTANBUL_CRITICAL_ISSUES_RESOLVED_REPORT.py  AI_ISTANBUL_TEST_INPUTS.txt  ALL_7_ERRORS_FIXED_FINAL.md  ALL_ERRORS_FIXED_DECEMBER_8_FINAL.md  ALL_HANDLERS_LLAMA_3_1_8B.md  ALL_UI_FIXES_COMPLETE_V2.md  AMPLITUDE_ANALYTICS_INTEGRATION.md  AMPLITUDE_QUICK_START.md  ANNUAL_COSTS_ANALYSIS.md  ANSWER_LLM_TRANSPORTATION_SERVICE.md  ANTI_COPY_PROTECTION_COMPLETE.md  API_COST_ESTIMATION_45K_USERS.md  API_ENDPOINTS_REFERENCE.md  API_KEYS_IMPLEMENTATION_GUIDE.md  (+1211 more)
admin/: README.md  amplitude-helpers.js  dashboard.html  dashboard.js  index.html
ai-stanbul/: package-lock.json  package.json
backend/: .dockerignore  .env  .env.example  .env.production  .env.template  .gcloudignore  .gitignore  Dockerfile  IMPROVED_PROMPT_TEMPLATES.py  MUSEUM_TEST_RESULTS.md  Procfile  READY_STATUS.md  TECHNICAL_SUMMARY.md  TRANSPORTATION_TEST_RESULTS.md  __init__.py  ai_stanbul  (+253 more)
(+1082 files in other folders)
